src/main/java/com/github/bigdata/sql/antlr4/stream/StreamSqlParser.java
// Generated from com/github/bigdata/sql/antlr4/stream/StreamSqlParser.g4 by ANTLR 4.7
package com.github.bigdata.sql.antlr4.stream;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class StreamSqlParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.7", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		SPACE=1, SPEC_MYSQL_COMMENT=2, COMMENT_INPUT=3, LINE_COMMENT=4, CREATE=5, 
		TABLE=6, SOURCE=7, SINK=8, SIDE=9, WITH=10, VIEW=11, COMMENT=12, TRUE=13, 
		FALSE=14, AS=15, BY=16, PROCTIME=17, ROWTIME=18, SET=19, WATERMARK=20, 
		RANGE=21, DELAY=22, INSERT=23, INTO=24, FUNCTION=25, USING=26, MINUSMINUS=27, 
		VARCHAR=28, BOOLEAN=29, TINYINT=30, SMALLINT=31, INT=32, BIGINT=33, FLOAT=34, 
		DECIMAL=35, DOUBLE=36, DATE=37, TIME=38, TIMESTAMP=39, STAR=40, DIVIDE=41, 
		MODULE=42, PLUS=43, MINUS=44, EQUAL_SYMBOL=45, GREATER_SYMBOL=46, LESS_SYMBOL=47, 
		EXCLAMATION_SYMBOL=48, BIT_NOT_OP=49, BIT_OR_OP=50, BIT_AND_OP=51, BIT_XOR_OP=52, 
		DOT=53, LR_BRACKET=54, RR_BRACKET=55, COMMA=56, SEMI=57, DOT_ID=58, ID=59, 
		REVERSE_QUOTE_ID=60, STRING_LITERAL=61, DECIMAL_LITERAL=62, REAL_LITERAL=63, 
		ERROR_RECONGNIGION=64;
	public static final int
		RULE_root = 0, RULE_sqlStatements = 1, RULE_sqlStatement = 2, RULE_createSoureTable = 3, 
		RULE_createSinkTable = 4, RULE_createSideTable = 5, RULE_createView = 6, 
		RULE_createFunction = 7, RULE_insertStatement = 8, RULE_setStatement = 9, 
		RULE_emptyStatement = 10, RULE_setKeyExpr = 11, RULE_valueKeyExpr = 12, 
		RULE_selectExpr = 13, RULE_word = 14, RULE_colTypeList = 15, RULE_colType = 16, 
		RULE_dataType = 17, RULE_tableNameList = 18, RULE_tablePropertyList = 19, 
		RULE_tableProperty = 20, RULE_tablePropertyKey = 21, RULE_tablePropertyValue = 22, 
		RULE_booleanValue = 23, RULE_timeModeExpr = 24, RULE_attrNameExpr = 25, 
		RULE_tableName = 26, RULE_functionName = 27;
	public static final String[] ruleNames = {
		"root", "sqlStatements", "sqlStatement", "createSoureTable", "createSinkTable", 
		"createSideTable", "createView", "createFunction", "insertStatement", 
		"setStatement", "emptyStatement", "setKeyExpr", "valueKeyExpr", "selectExpr", 
		"word", "colTypeList", "colType", "dataType", "tableNameList", "tablePropertyList", 
		"tableProperty", "tablePropertyKey", "tablePropertyValue", "booleanValue", 
		"timeModeExpr", "attrNameExpr", "tableName", "functionName"
	};

	private static final String[] _LITERAL_NAMES = {
		null, null, null, null, null, "'CREATE'", "'TABLE'", "'SOURCE'", "'SINK'", 
		"'SIDE'", "'WITH'", "'VIEW'", "'COMMENT'", "'TRUE'", "'FALSE'", "'AS'", 
		"'BY'", "'PROCTIME'", "'ROWTIME'", "'SET'", "'WATERMARK'", "'RANGE'", 
		"'DELAY'", "'INSERT'", "'INTO'", "'FUNCTION'", "'USING'", "'--'", "'VARCHAR'", 
		"'BOOLEAN'", "'TINYINT'", "'SMALLINT'", "'INT'", "'BIGINT'", "'FLOAT'", 
		"'DECIMAL'", "'DOUBLE'", "'DATE'", "'TIME'", "'TIMESTAMP'", "'*'", "'/'", 
		"'%'", "'+'", "'-'", "'='", "'>'", "'<'", "'!'", "'~'", "'|'", "'&'", 
		"'^'", "'.'", "'('", "')'", "','", "';'"
	};
	private static final String[] _SYMBOLIC_NAMES = {
		null, "SPACE", "SPEC_MYSQL_COMMENT", "COMMENT_INPUT", "LINE_COMMENT", 
		"CREATE", "TABLE", "SOURCE", "SINK", "SIDE", "WITH", "VIEW", "COMMENT", 
		"TRUE", "FALSE", "AS", "BY", "PROCTIME", "ROWTIME", "SET", "WATERMARK", 
		"RANGE", "DELAY", "INSERT", "INTO", "FUNCTION", "USING", "MINUSMINUS", 
		"VARCHAR", "BOOLEAN", "TINYINT", "SMALLINT", "INT", "BIGINT", "FLOAT", 
		"DECIMAL", "DOUBLE", "DATE", "TIME", "TIMESTAMP", "STAR", "DIVIDE", "MODULE", 
		"PLUS", "MINUS", "EQUAL_SYMBOL", "GREATER_SYMBOL", "LESS_SYMBOL", "EXCLAMATION_SYMBOL", 
		"BIT_NOT_OP", "BIT_OR_OP", "BIT_AND_OP", "BIT_XOR_OP", "DOT", "LR_BRACKET", 
		"RR_BRACKET", "COMMA", "SEMI", "DOT_ID", "ID", "REVERSE_QUOTE_ID", "STRING_LITERAL", 
		"DECIMAL_LITERAL", "REAL_LITERAL", "ERROR_RECONGNIGION"
	};
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "StreamSqlParser.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public StreamSqlParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class RootContext extends ParserRuleContext {
		public TerminalNode EOF() { return getToken(StreamSqlParser.EOF, 0); }
		public SqlStatementsContext sqlStatements() {
			return getRuleContext(SqlStatementsContext.class,0);
		}
		public TerminalNode MINUSMINUS() { return getToken(StreamSqlParser.MINUSMINUS, 0); }
		public RootContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_root; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof StreamSqlParserListener ) ((StreamSqlParserListener)listener).enterRoot(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof StreamSqlParserListener ) ((StreamSqlParserListener)listener).exitRoot(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof StreamSqlParserVisitor ) return ((StreamSqlParserVisitor<? extends T>)visitor).visitRoot(this);
			else return visitor.visitChildren(this);
		}
	}

	public final RootContext root() throws RecognitionException {
		RootContext _localctx = new RootContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_root);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(57);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << CREATE) | (1L << SET) | (1L << INSERT) | (1L << SEMI))) != 0)) {
				{
				setState(56);
				sqlStatements();
				}
			}

			setState(60);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==MINUSMINUS) {
				{
				setState(59);
				match(MINUSMINUS);
				}
			}

			setState(62);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SqlStatementsContext extends ParserRuleContext {
		public List<SqlStatementContext> sqlStatement() {
			return getRuleContexts(SqlStatementContext.class);
		}
		public SqlStatementContext sqlStatement(int i) {
			return getRuleContext(SqlStatementContext.class,i);
		}
		public List<EmptyStatementContext> emptyStatement() {
			return getRuleContexts(EmptyStatementContext.class);
		}
		public EmptyStatementContext emptyStatement(int i) {
			return getRuleContext(EmptyStatementContext.class,i);
		}
		public List<TerminalNode> SEMI() { return getTokens(StreamSqlParser.SEMI); }
		public TerminalNode SEMI(int i) {
			return getToken(StreamSqlParser.SEMI, i);
		}
		public List<TerminalNode> MINUSMINUS() { return getTokens(StreamSqlParser.MINUSMINUS); }
		public TerminalNode MINUSMINUS(int i) {
			return getToken(StreamSqlParser.MINUSMINUS, i);
		}
		public SqlStatementsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_sqlStatements; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof StreamSqlParserListener ) ((StreamSqlParserListener)listener).enterSqlStatements(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof StreamSqlParserListener ) ((StreamSqlParserListener)listener).exitSqlStatements(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof StreamSqlParserVisitor ) return ((StreamSqlParserVisitor<? extends T>)visitor).visitSqlStatements(this);
			else return visitor.visitChildren(this);
		}
	}

	public final SqlStatementsContext sqlStatements() throws RecognitionException {
		SqlStatementsContext _localctx = new SqlStatementsContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_sqlStatements);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(73);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,4,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					setState(71);
					_errHandler.sync(this);
					switch (_input.LA(1)) {
					case CREATE:
					case SET:
					case INSERT:
						{
						setState(64);
						sqlStatement();
						setState(66);
						_errHandler.sync(this);
						_la = _input.LA(1);
						if (_la==MINUSMINUS) {
							{
							setState(65);
							match(MINUSMINUS);
							}
						}

						setState(68);
						match(SEMI);
						}
						break;
					case SEMI:
						{
						setState(70);
						emptyStatement();
						}
						break;
					default:
						throw new NoViableAltException(this);
					}
					} 
				}
				setState(75);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,4,_ctx);
			}
			setState(84);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case CREATE:
			case SET:
			case INSERT:
				{
				setState(76);
				sqlStatement();
				setState(81);
				_errHandler.sync(this);
				switch ( getInterpreter().adaptivePredict(_input,6,_ctx) ) {
				case 1:
					{
					setState(78);
					_errHandler.sync(this);
					_la = _input.LA(1);
					if (_la==MINUSMINUS) {
						{
						setState(77);
						match(MINUSMINUS);
						}
					}

					setState(80);
					match(SEMI);
					}
					break;
				}
				}
				break;
			case SEMI:
				{
				setState(83);
				emptyStatement();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SqlStatementContext extends ParserRuleContext {
		public CreateSoureTableContext createSoureTable() {
			return getRuleContext(CreateSoureTableContext.class,0);
		}
		public CreateSinkTableContext createSinkTable() {
			return getRuleContext(CreateSinkTableContext.class,0);
		}
		public CreateViewContext createView() {
			return getRuleContext(CreateViewContext.class,0);
		}
		public CreateFunctionContext createFunction() {
			return getRuleContext(CreateFunctionContext.class,0);
		}
		public InsertStatementContext insertStatement() {
			return getRuleContext(InsertStatementContext.class,0);
		}
		public CreateSideTableContext createSideTable() {
			return getRuleContext(CreateSideTableContext.class,0);
		}
		public SetStatementContext setStatement() {
			return getRuleContext(SetStatementContext.class,0);
		}
		public SqlStatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_sqlStatement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof StreamSqlParserListener ) ((StreamSqlParserListener)listener).enterSqlStatement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof StreamSqlParserListener ) ((StreamSqlParserListener)listener).exitSqlStatement(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof StreamSqlParserVisitor ) return ((StreamSqlParserVisitor<? extends T>)visitor).visitSqlStatement(this);
			else return visitor.visitChildren(this);
		}
	}

	public final SqlStatementContext sqlStatement() throws RecognitionException {
		SqlStatementContext _localctx = new SqlStatementContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_sqlStatement);
		try {
			setState(93);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,8,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(86);
				createSoureTable();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(87);
				createSinkTable();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(88);
				createView();
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(89);
				createFunction();
				}
				break;
			case 5:
				enterOuterAlt(_localctx, 5);
				{
				setState(90);
				insertStatement();
				}
				break;
			case 6:
				enterOuterAlt(_localctx, 6);
				{
				setState(91);
				createSideTable();
				}
				break;
			case 7:
				enterOuterAlt(_localctx, 7);
				{
				setState(92);
				setStatement();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class CreateSoureTableContext extends ParserRuleContext {
		public ColTypeListContext columns;
		public TablePropertyListContext tableProps;
		public TimeModeExprContext timeMode;
		public TerminalNode CREATE() { return getToken(StreamSqlParser.CREATE, 0); }
		public TerminalNode SOURCE() { return getToken(StreamSqlParser.SOURCE, 0); }
		public TerminalNode TABLE() { return getToken(StreamSqlParser.TABLE, 0); }
		public TableNameContext tableName() {
			return getRuleContext(TableNameContext.class,0);
		}
		public TerminalNode WITH() { return getToken(StreamSqlParser.WITH, 0); }
		public ColTypeListContext colTypeList() {
			return getRuleContext(ColTypeListContext.class,0);
		}
		public TablePropertyListContext tablePropertyList() {
			return getRuleContext(TablePropertyListContext.class,0);
		}
		public TimeModeExprContext timeModeExpr() {
			return getRuleContext(TimeModeExprContext.class,0);
		}
		public CreateSoureTableContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_createSoureTable; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof StreamSqlParserListener ) ((StreamSqlParserListener)listener).enterCreateSoureTable(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof StreamSqlParserListener ) ((StreamSqlParserListener)listener).exitCreateSoureTable(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof StreamSqlParserVisitor ) return ((StreamSqlParserVisitor<? extends T>)visitor).visitCreateSoureTable(this);
			else return visitor.visitChildren(this);
		}
	}

	public final CreateSoureTableContext createSoureTable() throws RecognitionException {
		CreateSoureTableContext _localctx = new CreateSoureTableContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_createSoureTable);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(95);
			match(CREATE);
			setState(96);
			match(SOURCE);
			setState(97);
			match(TABLE);
			setState(98);
			tableName();
			setState(99);
			match(LR_BRACKET);
			setState(100);
			((CreateSoureTableContext)_localctx).columns = colTypeList();
			setState(101);
			match(RR_BRACKET);
			setState(102);
			match(WITH);
			setState(103);
			((CreateSoureTableContext)_localctx).tableProps = tablePropertyList();
			setState(104);
			((CreateSoureTableContext)_localctx).timeMode = timeModeExpr();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class CreateSinkTableContext extends ParserRuleContext {
		public ColTypeListContext columns;
		public TablePropertyListContext tableProps;
		public TerminalNode CREATE() { return getToken(StreamSqlParser.CREATE, 0); }
		public TerminalNode SINK() { return getToken(StreamSqlParser.SINK, 0); }
		public TerminalNode TABLE() { return getToken(StreamSqlParser.TABLE, 0); }
		public TableNameContext tableName() {
			return getRuleContext(TableNameContext.class,0);
		}
		public TerminalNode WITH() { return getToken(StreamSqlParser.WITH, 0); }
		public ColTypeListContext colTypeList() {
			return getRuleContext(ColTypeListContext.class,0);
		}
		public TablePropertyListContext tablePropertyList() {
			return getRuleContext(TablePropertyListContext.class,0);
		}
		public CreateSinkTableContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_createSinkTable; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof StreamSqlParserListener ) ((StreamSqlParserListener)listener).enterCreateSinkTable(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof StreamSqlParserListener ) ((StreamSqlParserListener)listener).exitCreateSinkTable(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof StreamSqlParserVisitor ) return ((StreamSqlParserVisitor<? extends T>)visitor).visitCreateSinkTable(this);
			else return visitor.visitChildren(this);
		}
	}

	public final CreateSinkTableContext createSinkTable() throws RecognitionException {
		CreateSinkTableContext _localctx = new CreateSinkTableContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_createSinkTable);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(106);
			match(CREATE);
			setState(107);
			match(SINK);
			setState(108);
			match(TABLE);
			setState(109);
			tableName();
			setState(110);
			match(LR_BRACKET);
			setState(111);
			((CreateSinkTableContext)_localctx).columns = colTypeList();
			setState(112);
			match(RR_BRACKET);
			setState(113);
			match(WITH);
			setState(114);
			((CreateSinkTableContext)_localctx).tableProps = tablePropertyList();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class CreateSideTableContext extends ParserRuleContext {
		public ColTypeListContext columns;
		public TablePropertyListContext tableProps;
		public TerminalNode CREATE() { return getToken(StreamSqlParser.CREATE, 0); }
		public TerminalNode SIDE() { return getToken(StreamSqlParser.SIDE, 0); }
		public TerminalNode TABLE() { return getToken(StreamSqlParser.TABLE, 0); }
		public TableNameContext tableName() {
			return getRuleContext(TableNameContext.class,0);
		}
		public TerminalNode WITH() { return getToken(StreamSqlParser.WITH, 0); }
		public ColTypeListContext colTypeList() {
			return getRuleContext(ColTypeListContext.class,0);
		}
		public TablePropertyListContext tablePropertyList() {
			return getRuleContext(TablePropertyListContext.class,0);
		}
		public CreateSideTableContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_createSideTable; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof StreamSqlParserListener ) ((StreamSqlParserListener)listener).enterCreateSideTable(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof StreamSqlParserListener ) ((StreamSqlParserListener)listener).exitCreateSideTable(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof StreamSqlParserVisitor ) return ((StreamSqlParserVisitor<? extends T>)visitor).visitCreateSideTable(this);
			else return visitor.visitChildren(this);
		}
	}

	public final CreateSideTableContext createSideTable() throws RecognitionException {
		CreateSideTableContext _localctx = new CreateSideTableContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_createSideTable);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(116);
			match(CREATE);
			setState(117);
			match(SIDE);
			setState(118);
			match(TABLE);
			setState(119);
			tableName();
			setState(120);
			match(LR_BRACKET);
			setState(121);
			((CreateSideTableContext)_localctx).columns = colTypeList();
			setState(122);
			match(RR_BRACKET);
			setState(123);
			match(WITH);
			setState(124);
			((CreateSideTableContext)_localctx).tableProps = tablePropertyList();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class CreateViewContext extends ParserRuleContext {
		public SelectExprContext select;
		public TerminalNode CREATE() { return getToken(StreamSqlParser.CREATE, 0); }
		public TerminalNode VIEW() { return getToken(StreamSqlParser.VIEW, 0); }
		public TableNameContext tableName() {
			return getRuleContext(TableNameContext.class,0);
		}
		public TerminalNode AS() { return getToken(StreamSqlParser.AS, 0); }
		public SelectExprContext selectExpr() {
			return getRuleContext(SelectExprContext.class,0);
		}
		public CreateViewContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_createView; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof StreamSqlParserListener ) ((StreamSqlParserListener)listener).enterCreateView(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof StreamSqlParserListener ) ((StreamSqlParserListener)listener).exitCreateView(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof StreamSqlParserVisitor ) return ((StreamSqlParserVisitor<? extends T>)visitor).visitCreateView(this);
			else return visitor.visitChildren(this);
		}
	}

	public final CreateViewContext createView() throws RecognitionException {
		CreateViewContext _localctx = new CreateViewContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_createView);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(126);
			match(CREATE);
			setState(127);
			match(VIEW);
			setState(128);
			tableName();
			setState(129);
			match(AS);
			setState(130);
			((CreateViewContext)_localctx).select = selectExpr();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class CreateFunctionContext extends ParserRuleContext {
		public Token className;
		public Token jarFile;
		public TerminalNode CREATE() { return getToken(StreamSqlParser.CREATE, 0); }
		public TerminalNode FUNCTION() { return getToken(StreamSqlParser.FUNCTION, 0); }
		public FunctionNameContext functionName() {
			return getRuleContext(FunctionNameContext.class,0);
		}
		public TerminalNode AS() { return getToken(StreamSqlParser.AS, 0); }
		public TerminalNode USING() { return getToken(StreamSqlParser.USING, 0); }
		public List<TerminalNode> STRING_LITERAL() { return getTokens(StreamSqlParser.STRING_LITERAL); }
		public TerminalNode STRING_LITERAL(int i) {
			return getToken(StreamSqlParser.STRING_LITERAL, i);
		}
		public CreateFunctionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_createFunction; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof StreamSqlParserListener ) ((StreamSqlParserListener)listener).enterCreateFunction(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof StreamSqlParserListener ) ((StreamSqlParserListener)listener).exitCreateFunction(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof StreamSqlParserVisitor ) return ((StreamSqlParserVisitor<? extends T>)visitor).visitCreateFunction(this);
			else return visitor.visitChildren(this);
		}
	}

	public final CreateFunctionContext createFunction() throws RecognitionException {
		CreateFunctionContext _localctx = new CreateFunctionContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_createFunction);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(132);
			match(CREATE);
			setState(133);
			match(FUNCTION);
			setState(134);
			functionName();
			setState(135);
			match(AS);
			setState(136);
			((CreateFunctionContext)_localctx).className = match(STRING_LITERAL);
			setState(137);
			match(USING);
			setState(138);
			((CreateFunctionContext)_localctx).jarFile = match(STRING_LITERAL);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class InsertStatementContext extends ParserRuleContext {
		public TableNameListContext tableNames;
		public SelectExprContext select;
		public TerminalNode INSERT() { return getToken(StreamSqlParser.INSERT, 0); }
		public TerminalNode INTO() { return getToken(StreamSqlParser.INTO, 0); }
		public TableNameListContext tableNameList() {
			return getRuleContext(TableNameListContext.class,0);
		}
		public SelectExprContext selectExpr() {
			return getRuleContext(SelectExprContext.class,0);
		}
		public InsertStatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_insertStatement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof StreamSqlParserListener ) ((StreamSqlParserListener)listener).enterInsertStatement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof StreamSqlParserListener ) ((StreamSqlParserListener)listener).exitInsertStatement(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof StreamSqlParserVisitor ) return ((StreamSqlParserVisitor<? extends T>)visitor).visitInsertStatement(this);
			else return visitor.visitChildren(this);
		}
	}
